# Development-Reference

./: .gitignore  README.md  frames_2024-11-16_15.01.21.gv
install/: local_setup.sh  setup.sh
install/boat_ctrl/lib/boat_ctrl/: odom
install/boat_ctrl/share/boat_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kiss_icp/lib/kiss_icp/: kiss_icp_node
install/kiss_icp/share/kiss_icp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mhsboat/lib/mhsboat/: placeholder.py
install/mhsboat/share/mhsboat/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/velodyne/share/velodyne/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_driver/include/velodyne_driver/: driver.hpp  input.hpp  time_conversion.hpp
install/velodyne_driver/lib/velodyne_driver/: vdump  (+1 more)
log/: latest_build
mhsboat/: CMakeLists.txt  install_dependencies.sh  package.xml
mhsboat/config/: ekf.yaml  view_boat.rviz
mhsboat/launch/: run_boat.py  view_gazebo.launch.py
mhsboat/urdf/: VLP-16.urdf.xacro  tuppy.urdf
src/boat_ctrl/: package.xml  setup.py
src/boat_ctrl/boat_ctrl/: kiss_icp.py
src/mhsboat/: install_dependencies.sh  package.xml
src/mhsboat/config/: ekf.yaml  nav2_params.yaml  view_boat.rviz
src/mhsboat/launch/: view_gazebo.launch.py  view_urdf.launch.py
src/mhsboat/scripts/: placeholder.py
src/mhsboat/urdf/: tuppy.urdf
(+199 files in other folders)
